--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,39 +14,38 @@ source:
 
 build:
   number: 1
-#  skip: true  # [win]
   run_exports:
     - {{ pin_subpackage('cerf', max_pin='x.x') }}
 
 requirements:
   build:
-    - python                                                              # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}                                  # [build_platform != target_platform]
-    - {{ compiler('c') }}                                                 # [unix]
-    - {{ compiler('cxx') }}                                               # [win]
+    - python                                                                     # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}                                         # [build_platform != target_platform]
+    - {{ compiler('c') }}                                                        # [unix]
+    - {{ compiler('cxx') }}                                                      # [win]
     - cmake
     - ninja
 
 test:
   requires:
-    - m2w64-binutils                                                      # [win]   # provides objdump.exe
+    - m2w64-binutils                                                             # [win]   # provides objdump.exe
   commands:
     # Verify library
-    - test -L $PREFIX/lib/libcerf$SHLIB_EXT                               # [unix]
-    - test ! -f $PREFIX/lib/libcerf.a                                     # [unix]
-    - if not exist %PREFIX%\\Library\\lib\\cerfcpp.lib exit 1             # [win]   # ms import lib
-    - if not exist %PREFIX%\\Library\\bin\\cerfcpp.dll exit 1             # [win]   # gnu/ms dyn lib
+    - test -L $PREFIX/lib/libcerf$SHLIB_EXT                                      # [unix]
+    - test ! -f $PREFIX/lib/libcerf.a                                            # [unix]
+    - if not exist %PREFIX%\\Library\\lib\\cerfcpp.lib exit 1                    # [win]   # ms import lib
+    - if not exist %PREFIX%\\Library\\bin\\cerfcpp.dll exit 1                    # [win]   # gnu/ms dyn lib
     # Verify accessories
-    - test -f $PREFIX/include/cerf.h                                      # [unix]
-    - test -f $PREFIX/lib/cmake/cerf/cerfConfig.cmake                     # [unix]
-    - test -f $PREFIX/lib/pkgconfig/libcerf.pc                            # [unix]
-    - if not exist %PREFIX%\\Library\\include\\cerf.h exit 1              # [win]
+    - test -f $PREFIX/include/cerf.h                                             # [unix]
+    - test -f $PREFIX/lib/cmake/cerf/cerfConfig.cmake                            # [unix]
+    - test -f $PREFIX/lib/pkgconfig/libcerf.pc                                   # [unix]
+    - if not exist %PREFIX%\\Library\\include\\cerf.h exit 1                     # [win]
     - if not exist %PREFIX%\\Library\\lib\\cmake\\cerf\\cerfConfig.cmake exit 1  # [win]
-    - if exist %PREFIX%\\Library\\lib\\pkgconfig\\libcerf.pc exit 1       # [win]
+    - if exist %PREFIX%\\Library\\lib\\pkgconfig\\libcerf.pc exit 1              # [win]
     # Inspect linkage
-    - ldd -v $PREFIX/lib/libcerf$SHLIB_EXT                                # [linux and build_platform == target_platform]
-    - otool -L $PREFIX/lib/libcerf$SHLIB_EXT                              # [osx]
-    - objdump.exe -p %PREFIX%\\Library\\bin\\cerf.dll | findstr /i "dll"  # [win]
+    - ldd -v $PREFIX/lib/libcerf$SHLIB_EXT                                       # [linux and build_platform == target_platform]
+    - otool -L $PREFIX/lib/libcerf$SHLIB_EXT                                     # [osx]
+    - objdump.exe -p %PREFIX%\\Library\\bin\\cerfcpp.dll | findstr /i "dll"      # [win]
 
 about:
   home: https://jugit.fz-juelich.de/mlz/libcerf
